kubernetes/apps/dev/admin/capacitor/app/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: apps
  labels:
    app: capacitor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - capacitor.xonery.dev
      secretName: capacitor-tls
  rules:
    - host: capacitor.xonery.dev
      http:
        paths:  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
